--- a/frontend/src/app/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/components/sidebar/sidebar.component.scss
@@ -1,7 +1,7 @@
-#sidebarContent {
-    max-height: 85%;
-    max-width: 25%;
-}
+// #sidebarContent {
+//     max-height: 85%;
+//     max-width: 25%;
+// }
 
 #theButton {
     z-index: 2;
