--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -15,22 +15,23 @@
 </ul>   -->
     
 <!--  -->
-    <div (click)="onClick()" class="btn navbar-toggler bg-light navbar-collapse" id="theButton" data-toggle="collapse" data-target=".multi-collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation" >
-        <div class="icon-bar" [@hamburguerX]="isHamburguer ? 'hamburguer' : 'topX'"></div>
-        <div class="icon-bar" [@hamburguerX]="isHamburguer ? 'hamburguer' : 'hide'"></div>
-        <div class="icon-bar" [@hamburguerX]="isHamburguer ? 'hamburguer' : 'bottomX'"></div>
-    </div>
+   
+<div (click)="onClick()" id="theButton" class="btn navbar-toggler bg-light navbar-collapse" data-toggle="collapse" data-target=".multi-collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation" >
+    <div class="icon-bar" [@hamburguerX]="isHamburguer ? 'hamburguer' : 'topX'"></div>
+    <div class="icon-bar" [@hamburguerX]="isHamburguer ? 'hamburguer' : 'hide'"></div>
+    <div class="icon-bar" [@hamburguerX]="isHamburguer ? 'hamburguer' : 'bottomX'"></div>
+</div>
 
-<div class="multi-collapse" 
+<div class="border-right" 
+*ngIf='!sidebar.show'
 mwlResizable
 [validateResize]='validate'
 [enableGhostResize]="true"
 [resizeEdges]="{ bottom: false, right: true, top: false, left: false }"
 (resizeEnd)="onResizeEnd($event)"
 [ngStyle]='Styles'>
-    <ul class="nav nav-pills nav-fill justify border-right navbar navbar-light navbar-expand-lg" id="sidebar">
-        
-        <div class="navbar-collapse collapse multi-collapse ">
+    <ul class="nav nav-pills nav-fill justify collapse multi-collapse show" id="sidebar" #sidebar aria-expanded="true">
+        <div class="navbar navbar-expand-lg navbar-collapse " >
             <li class="nav-item" *ngFor='let item of items, let i = index' >
                 <a class="nav-link" data-toggle="pill" [ngClass]="{'active': i === 0}" style="cursor: pointer;">{{ item }}</a>
             </li>
@@ -43,9 +44,9 @@ mwlResizable
             </li>
         </div>
     </ul>
-    <!-- <div class="container-fluid multi-collapse" id="sidebarContent">
+    <div class="container-fluid multi-collapse collapse show" id="sidebarContent">
         <p>actual content</p>
-    </div>  -->
+    </div> 
 </div> 
 
 
