--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -57,9 +57,8 @@ mwlResizable
                 </button>
             </li>
         </ul>  
-        <button (click)="showFiller = !showFiller" mat-raised-button>
-          Toggle extra text
+        <button (click)="initFoursquare()" mat-raised-button>
+          foursquare
         </button>
-        <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
     </mat-drawer>
 </mat-drawer-container>
