--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -60,5 +60,6 @@ mwlResizable
         <button (click)="initFoursquare()" mat-raised-button>
           foursquare
         </button>
+        <app-account></app-account>
     </mat-drawer>
 </mat-drawer-container>
