--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -57,5 +57,7 @@ mwlResizable
                 </button>
             </li>
         </ul>
+        <br>
+        <button class="btn btn-primary" (click)='searchFriend()'>send Friendlist</button>
     </mat-drawer>
 </mat-drawer-container>
