--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 <div>
   <div class="row ">
     <!-- search bar -->
-    <form class='form col-6 col-sm-6 col-md-6 col-lg-6 col-xl-4
+    <form (submit)='onSubmit(search.value)' class='form col-6 col-sm-6 col-md-6 col-lg-6 col-xl-4
                       offset-3 offset-sm-3 offset-md-3 offset-lg-3 offset-xl-4'>
-      <input #seach (keyup)='onKey(seach.value)' class='form-control' type='search' placeholder='Search' aria-label='Search' autocomplete='off'>
+      <input #search (keyup)='onKey(search.value)' class='form-control' type='search' placeholder='Search' aria-label='Search' autocomplete='off'>
       <i class="fas fa-search" aria-hidden="true"></i>
        <!-- search results -->
       <div class="container-fluid" id='searchResultsContainer'>
