--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -49,7 +49,7 @@ mwlResizable
 
         <ul class="nav nav-pills nav-fill justify">
             <li class="nav-item" *ngFor='let item of openTabs, let i = index' >
-                <a class="nav-link" data-toggle="pill" [ngClass]="{'active': i === 0}" style="cursor: pointer;">{{ item }}</a>
+                <a class="nav-link" data-toggle="pill" [ngClass]="{'active': i === 0}" style="cursor: pointer;">{{ item.title }}</a>
             </li>
             <li class="nav-item">
                 <button class="example-sidenav-content nav-link" type="button" mat-button (click)="drawer.toggle()">
