--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -27,10 +27,11 @@
   <div>
     <app-sidebar></app-sidebar>
   </div>
-  
+
   
 
   <div id="chatsystem">
+    <app-account></app-account>
     <app-chatsystem></app-chatsystem>
   </div>
 
