--- a/frontend/src/app/components/sidebar/header/header.component.scss
+++ b/frontend/src/app/components/sidebar/header/header.component.scss
@@ -1,5 +1,5 @@
 #icon {
-    position: absolute;
+    position: relative;
     top: 15px;
     right: 20px;
 }
@@ -20,4 +20,7 @@
 
 img {
     max-width: 60px;
+}
+#header{
+  width: 100%;
 }
