--- a/frontend/src/app/components/sidebar/header/header.component.html
+++ b/frontend/src/app/components/sidebar/header/header.component.html
@@ -1,8 +1,7 @@
-<div>
+<div id='header'>
   <div class="row ">
     <!-- search bar -->
-    <form (submit)='onSubmit(search.value)' class='form col-6 col-sm-6 col-md-6 col-lg-6 col-xl-4
-                      offset-3 offset-sm-3 offset-md-3 offset-lg-3 offset-xl-4'>
+    <form (submit)='onSubmit(search.value)' class='form'>
       <input #search (keyup)='onKey(search.value)' class='form-control' type='search' placeholder='Search' aria-label='Search' autocomplete='off'>
       <i class="fas fa-search" aria-hidden="true"></i>
        <!-- search results -->
@@ -13,8 +12,7 @@
     </form>
 
     <!-- login/register widgets -->
-    <div class='col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2
-                offset-lg-1 offset-xl-2'
+    <div class=''
       *ngIf='!sessionState'>
         <a class='btn btn-primary' routerLink='register' style="margin-right: 1%;">Register<span class='sr-only'></span></a>
         <a class='btn btn-primary' routerLink='login'>Login<span class='sr-only'></span></a>
@@ -28,12 +26,12 @@
       <button class="btn btn-secondary dropdown-item" routerLink='profile'>Profile</button>
       <app-logout class="dropdown-item"></app-logout>
     </div>
-  </div>   
+  </div>
 </div>
 
 
 
-<!-- 
+<!--
   <div class='col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2
   offset-lg-1 offset-xl-2'
 *ngIf='sessionState'>
