--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -39,7 +39,7 @@ mwlResizable
 
 
 
-<mat-drawer-container autosize >
+<mat-drawer-container class='rounded' id='yuh' autosize >
     <mat-drawer
     mwlResizable
     [validateResize]='validate'
