--- a/frontend/src/app/components/sidebar/header/header.component.html
+++ b/frontend/src/app/components/sidebar/header/header.component.html
@@ -1,6 +1,7 @@
 <div id='header'>
   <div class="row ">
     <!-- search bar -->
+    <div class="col-6">
     <form (submit)='onSubmit(search.value)' class='form'>
       <input #search (keyup)='onKey(search.value)' class='form-control' type='search' placeholder='Search' aria-label='Search' autocomplete='off'>
       <i class="fas fa-search" aria-hidden="true"></i>
@@ -10,9 +11,10 @@
         <div #searchResults></div>
       </div>
     </form>
+  </div>
 
     <!-- login/register widgets -->
-    <div class=''
+    <div class='col-6'
       *ngIf='!sessionState'>
         <a class='btn btn-primary' routerLink='register' style="margin-right: 1%;">Register<span class='sr-only'></span></a>
         <a class='btn btn-primary' routerLink='login'>Login<span class='sr-only'></span></a>
