--- a/frontend/src/app/components/sidebar/header/header.component.html
+++ b/frontend/src/app/components/sidebar/header/header.component.html
@@ -1,37 +1,63 @@
-<div id='header'>
-  <div class="row ">
-    <!-- search bar -->
-    <div class="col-6">
-    <form (submit)='onSubmit(search.value)' class='form'>
-      <input #search (keyup)='onKey(search.value)' class='form-control' type='search' placeholder='Search' aria-label='Search' autocomplete='off'>
-      <i class="fas fa-search" aria-hidden="true"></i>
-       <!-- search results -->
-      <div class="container-fluid" id='searchResultsContainer'>
-        <div *ngIf='loading' class="spinner-border text-primary" style="margin-left: 50%;"></div>
-        <div #searchResults></div>
-      </div>
-    </form>
-  </div>
-
-    <!-- login/register widgets -->
-    <div class='col-6'
-      *ngIf='!sessionState'>
-        <a class='btn btn-primary' routerLink='register' style="margin-right: 1%;">Register<span class='sr-only'></span></a>
-        <a class='btn btn-primary' routerLink='login'>Login<span class='sr-only'></span></a>
+<!-- <div id='header' class="row-12"> -->
+  <!-- search bar -->
+  <!-- <form (submit)='onSubmit(search.value)' class='form col-auto'>
+    <input #search (keyup)='onKey(search.value)' class='form-control' type='search' placeholder='Search' aria-label='Search' autocomplete='off'>
+    <i class="fas fa-search" aria-hidden="true"></i> -->
+      <!-- search results -->
+    <!-- <div class="container-fluid" id='searchResultsContainer'>
+      <div *ngIf='loading' class="spinner-border text-primary" style="margin-left: 50%;"></div>
+      <div #searchResults></div>
     </div>
-  </div>
+  </form> -->
+
+  <!-- login/register widgets -->
+  <!-- <div
+    class='col-auto'
+    *ngIf='!sessionState'>
+      <a class='btn btn-primary' routerLink='register' style="margin-right: 1%;">Register<span class='sr-only'></span></a>
+      <a class='btn btn-primary' routerLink='login'>Login<span class='sr-only'></span></a>
+  </div> -->
 
   <!-- dropdown menu -->
-  <div *ngIf='sessionState' id='icon' class="dropdown">
+  <!-- <div *ngIf='sessionState' id='icon' class="dropdown">
     <img class='img-thumbnail dropdown-toggle' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" [src]="link" alt="Settings">
     <div class="dropdown-menu dropdown-menu-right ">
       <button class="btn btn-secondary dropdown-item" routerLink='profile'>Profile</button>
       <app-logout class="dropdown-item"></app-logout>
     </div>
   </div>
-</div>
+</div> -->
 
+<ul class="nav nav-pills nav-fill">
 
+  <li class="nav-item">
+    <form (submit)='onSubmit(search.value)' class='form col-auto'>
+      <input #search (keyup)='onKey(search.value)' class='form-control' type='search' placeholder='Search' aria-label='Search' autocomplete='off'>
+      <i class="fas fa-search" aria-hidden="true"></i>
+        <!-- search results -->
+      <div class="container-fluid" id='searchResultsContainer'>
+        <div *ngIf='loading' class="spinner-border text-primary" style="margin-left: 50%;"></div>
+        <div #searchResults></div>
+      </div>
+    </form>
+  </li>
+
+  <li *ngIf='!sessionState' class="nav-item">
+    <a class='btn btn-primary' routerLink='register' style="margin-right: 1%;">Register<span class='sr-only'></span></a>
+    <a class='btn btn-primary' routerLink='login'>Login<span class='sr-only'></span></a>
+
+  </li>
+
+  <li *ngIf='sessionState' class="nav-item">
+    <div  id='icon' class="dropdown">
+      <img class='img-thumbnail dropdown-toggle' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" [src]="link" alt="Settings">
+      <div class="dropdown-menu dropdown-menu-right ">
+        <button class="btn btn-secondary dropdown-item" routerLink='profile'>Profile</button>
+        <app-logout class="dropdown-item"></app-logout>
+      </div>
+    </div>
+  </li>
+</ul>
 
 <!--
   <div class='col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2
