--- a/frontend/src/app/components/sidebar/header/header.component.scss
+++ b/frontend/src/app/components/sidebar/header/header.component.scss
@@ -1,7 +1,7 @@
 #icon {
-    position: relative;
-    top: 15px;
-    right: 20px;
+    // position: relative;
+    // top: 15px;
+    // right: 20px;
 }
 
 #searchResultsContainer {
