--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -39,7 +39,7 @@ mwlResizable
 
 
 
-<mat-drawer-container class='rounded' id='yuh' style="overflow-x: hidden;" autosize >
+<mat-drawer-container class='container-fluid' style="overflow-x: hidden;" autosize >
     <mat-drawer
     mwlResizable
     [validateResize]='validate'
@@ -52,16 +52,22 @@ mwlResizable
         <header-navbar></header-navbar>
         <ul class="nav nav-pills nav-fill justify">
 
-            <li class="nav-item" *ngFor='let item of openTabs, let i = index' >
-                <a class="nav-link" data-toggle="pill" [ngClass]="{'active': i === 0}" style="cursor: pointer;">{{ item.title }}</a>
-            </li>
-            <li class="nav-item">
-                <button class="example-sidenav-content nav-link" type="button" mat-button (click)="window = !window">
+            <li class="nav-item" *ngFor='let item of openTabs, let i = index'  routerLink={{item.path}} >
+                <a class="nav-link" data-toggle="pill" [ngClass]="{'active': i === 0}" style="cursor: pointer;">{{ item.title }}
+                  <button class="example-sidenav-content nav-link" type="button" mat-button (click)="window = !window">
+                    <span>&times;</span>
+                </button>
+
+                </a>
+                  <button class="example-sidenav-content nav-link" type="button" mat-button (click)="window = !window">
                     <span>&times;</span>
                 </button>
             </li>
+            <li class="nav-item">
+            </li>
         </ul>
         <br>
-        <button class="btn btn-primary" (click)='searchFriend()'>send Friendlist</button>
+        <router-outlet></router-outlet>
+        <!-- <button class="btn btn-primary" (click)='searchFriend()'>send Friendlist</button> -->
     </mat-drawer>
 </mat-drawer-container>
