--- a/frontend/src/app/components/chatsystem/chatwidget/chatwidget.component.html
+++ b/frontend/src/app/components/chatsystem/chatwidget/chatwidget.component.html
@@ -9,7 +9,7 @@
   <div class='space rounded-bottom' >
     <form (submit)='sendMessage(msg.value)' class="container-fluid" autocomplete="off">
       <div class="row">
-        <textarea class="col-auto" name="ngModel" [(ngModel)]='typeArea' #msg='ngModel' type="textarea"></textarea>
+        <textarea class="col-auto" name="ngModel" [(ngModel)]='typeArea' #msg='ngModel' type="textarea" (keydown)='onKey($event)'></textarea>
         <input class='btn btn-primary col' id='submit' type="submit" value="Send">
       </div>
     </form>
