--- a/frontend/src/app/components/registration-process/registration-process.component.html
+++ b/frontend/src/app/components/registration-process/registration-process.component.html
@@ -1,5 +1,5 @@
   <mat-horizontal-stepper linear #stepper>
-    <mat-step [stepControl]="registration.registrationForm" [optional]="false">
+    <mat-step [stepControl]="registration.registrationForm" [optional]="true">
         <ng-template matStepLabel>Create Your Account</ng-template>
         <app-registrationpage #registration></app-registrationpage>
         <div>
@@ -7,22 +7,26 @@
         </div>
     </mat-step>
     <mat-step [stepControl]="secondFormGroup" [optional]="true">
-      <form [formGroup]="secondFormGroup">
-        <ng-template matStepLabel>Tell Us Where You've Been</ng-template>
+      <ng-template matStepLabel>Tell Us Where You've Been</ng-template>
+      <!-- <form [formGroup]="secondFormGroup">
         <mat-form-field>
           <mat-label>Address</mat-label>
           <input matInput formControlName="secondCtrl" placeholder="Ex. 1 Main St, New York, NY"
                  required>
         </mat-form-field>
-        <div>
+        <div> -->
           <!-- <button mat-button matStepperPrevious>Back</button> -->
-          <button mat-button matStepperNext>Next</button>
-        </div>
-      </form>
+        <!-- </div>
+      </form> -->
+      <app-country-selector class="" [direction]='true'></app-country-selector>
+      <div>
+        <button mat-button matStepperNext>Skip</button>
+      </div>
     </mat-step>
     <mat-step [optional]="true">
       <ng-template matStepLabel>Where Do You Want To Go</ng-template>
-      <p>You are now done.</p>
+      <!-- <p>You are now done.</p> -->
+      <app-country-selector class="" [direction]='false'></app-country-selector>
       <div>
         <button mat-button matStepperPrevious>Back</button>
         <button mat-button (click)="stepper.reset()">Reset</button>
