--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -65,6 +65,7 @@ mwlResizable
         </ul>
         <br>
         <router-outlet></router-outlet>
+        <app-registration-process class=""></app-registration-process>
         <!-- <button class="btn btn-primary" (click)='searchFriend()'>send Friendlist</button> -->
     </mat-drawer>
 </mat-drawer-container>
