--- a/frontend/src/app/components/sidebar/header/header.component.html
+++ b/frontend/src/app/components/sidebar/header/header.component.html
@@ -33,8 +33,8 @@
   <li class="nav-item">
     <form (submit)='onSubmit(search.value)' class='form'>
 
-      <mat-form-field>
-        <input matInput #search (keyup)='onKey(search.value)' class='form-control' type='search' placeholder='Search' aria-label='Search' autocomplete='off'>
+      <mat-form-field class="input">
+        <input matInput #search (keyup)='onKey(search.value)' class='form-control input' type='search' placeholder='Search' aria-label='Search' autocomplete='off'>
         <i fas fa-search aria-hidden="true"></i>
         <mat-label>Search a place</mat-label>
       </mat-form-field>
@@ -48,7 +48,7 @@
     <a class='btn btn-primary' routerLink='login'>Login<span class='sr-only'></span></a>
   </li>
 
-  <li *ngIf='sessionState' class="nav-item topButton">
+  <li *ngIf='sessionState' class="nav-item topIcon">
     <div  id='icon' class="dropdown">
       <img class='img-thumbnail dropdown-toggle' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" [src]="link" alt="Settings">
       <div class="dropdown-menu dropdown-menu-right ">
