--- a/frontend/src/app/components/sidebar/header/header.component.scss
+++ b/frontend/src/app/components/sidebar/header/header.component.scss
@@ -1,8 +1,3 @@
-#icon {
-    // position: relative;
-    // top: 15px;
-    // right: 20px;
-}
 
 #searchResultsContainer {
     background-color: rgba(255,255,255, $alpha: 0.9);
@@ -16,6 +11,7 @@
 
 .input {
     padding: 2%;
+    width: 100%;
 }
 
 img {
@@ -25,5 +21,12 @@ img {
   width: 100%;
 }
 .topButton{
+  top: 15px;
+  position: relative;
+  max-width: 40%;
+}
+.topIcon{
   top: 10px;
+  position: relative;
+  max-width: 25%;
 }
